--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -206,7 +206,7 @@
     }
 
     .certificationCarousel {
-        padding: 0 20px 0 20px;
+        margin: 0 25px 0 25px;
 
         .certificationCard {
             text-align: center;
