--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -351,21 +351,18 @@
 
                     .iconFooterOut{
                         color: #00894f;
+                        font-size: 24px;
                     }
 
                     .content{
-                        a{
+                        a {
                             justify-content: start;
                         }
                     }
 
-                    a{
+                    a {
                         gap: 5px;
                         justify-content: start;
-                        
-                        .iconFooter{
-                            color: #00894f;
-                        }
 
                         .imgMedia{
                             width: 55px;
