--- a/src/components/private-label-services/private-label-services.module.scss
+++ b/src/components/private-label-services/private-label-services.module.scss
@@ -190,13 +190,14 @@
     margin-top: 30px;
 
     .productCarousel {
-        padding: 0 20px 0 20px;
+        margin: 0 25px 0 25px;
 
         .productCard {
             text-align: center;
             margin-bottom: 4rem;
             box-shadow: 4px 4px 10px -1px #1D4486;
             width: 75% !important;
+            border-radius: 5px;
 
             .productCardImage {
                 display: flex;
