--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -743,6 +743,7 @@
                     height: 35px;
                     border-radius: 20px;
                     justify-content: space-around;
+                    cursor: pointer;
 
                     p {
                         font-size: 16px;
