--- a/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
+++ b/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
@@ -185,7 +185,7 @@
     margin-top: 10px;
 
     .productCarousel {
-        padding: 0 20px 0 20px;
+        margin: 0 25px 0 25px;
 
         .productCard {
             text-align: center;
